Add bulk todo notification read and user time format settings
